--- a/.tmp/drop/visual.css
+++ b/.tmp/drop/visual.css
@@ -2,16 +2,34 @@
   width: 100%;
   height: 100%;
 }
-.container {
+.userInfoContainer {
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: start;
   align-items: center;
-  gap: 10px;
-  margin: 10px 10px;
+  gap: 20px;
+  margin: 8px 8px;
+}
+.userInfoTextContainer {
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: start;
 }
 .name {
   text-transform: capitalize;
+  font-size: 26px;
+  margin: 0;
+}
+.rating {
+  font-size: 20px;
+  margin: 0;
+  margin-top: 5px;
+  font-weight: normal;
+}
+.userImage {
+  height: 120px;
 }
 .reviewContainer {
   overflow: auto;
@@ -28,7 +46,7 @@
   /* Adjust font size as needed */
   padding: 20px;
   /* Optional padding */
+  font-size: 24px;
+  font-style: italic;
 }
 
-
-/*# sourceMappingURL=https://localhost:8080/assets/visual.css.map*/
