--- a/style/visual.less
+++ b/style/visual.less
@@ -1,55 +1,46 @@
-// .reviewViewer {
-//   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-
-//   .container {
-//     text-anchor: middle;
-
-//     .reviewImage {
-//       border-radius: 50%;
-//     }
-
-//     .reviewName {
-//       font-size: 24px;
-//       font-weight: bold;
-//     }
-
-//     .review-text {
-//       overflow: auto; /* Enable scrolling */
-//       max-height: 100%; /* Ensure it doesn’t exceed container height */
-//       line-height: 1.4; /* Adjust line height for readability */
-//       font-size: 12px; /* Adjust font size as needed */
-//       padding: 5px; /* Optional padding */
-//     }
-
-//     .reviewRating {
-//       font-size: 20px;
-//     }
-//   }
-// }
-
 .customVisual {
   width: 100%;
   height: 100%;
 }
 
-.container {
+.userInfoContainer {
   //   width: 100%;
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: start;
   align-items: center;
-  gap: 10px;
-  margin: 10px 10px;
+  gap: 20px;
+  margin: 8px 8px;
+}
+
+.userInfoTextContainer {
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: start;
+  // gap: 20px;
+  // margin: 10px 10px;
 }
 
 .name {
   text-transform: capitalize;
+  font-size: 26px;
+  margin: 0;
 }
 
-.image {
+.rating {
+  font-size: 20px;
+  margin: 0;
+  margin-top: 5px;
+  font-weight: normal;
+}
+
+.userImage {
   //   stroke: black;
   //   stroke-width: 2px;
   // margin: 100px /* Optional padding */
+  height: 120px;
 }
 
 .reviewContainer {
@@ -62,4 +53,6 @@
   line-height: 1.4; /* Adjust line height for readability */
   font-size: 12px; /* Adjust font size as needed */
   padding: 20px; /* Optional padding */
+  font-size: 24px; // font size
+  font-style: italic; // font style
 }
